fix jumping scroll

--- a/scss/sections/components.scss
+++ b/scss/sections/components.scss
@@ -1316,3 +1316,10 @@ input[type='range'].styled-slider.slider-progress:active::-ms-fill-lower {
 .noscroll {
   overflow: hidden;
 }
+
+
+.scroll {
+  @media (min-width: $breakpoint-lg) {
+    overflow-y: scroll;
+  }
+}
